clusters/murder/default/website.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-deployment
  namespace: default
  labels:
    app: website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: website
  template:
    metadata:
      labels:
        app: website
    spec:
      containers:
      - name: website
        image: ghcr.io/dankirkham/website:release
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: website-service
  namespace: default
spec:
  selector:
    app.kubernetes.io/name: Website
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
